src/test/resources/public/input/typechecking/fail/incompatible_assign/fail01.jova
class Tmp {
  public string f;
}
class Cls {
    public Tmp t;

	public int func(int x) {
		return 42;
	}

	public string func(string x) {
		return "somestr";
	}

	public int cls(){
		int a, b, c;
        Tmp t;
        t = new Tmp;
		a= "somestr"; // fail1
		b= true;      // warning1
		c= func("a"); // fail2
		c= func(2);
		return t.f;   // fail3
	}

}
   class Tmp2 {
        public Cls c;

        public int tmp2(){
            return c.t.f; // fail4
        }
    }